Updated files: adds IR control and play piezo tunes to Turtlebot.cpp

--- a/Arduino/Dev/ArduBlock/ardublock/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/Arduino/Dev/ArduBlock/ardublock/src/main/resources/com/ardublock/block/ardublock.properties
@@ -1064,6 +1064,9 @@ bg.boe_spin_right.description=Spins right 90 degrees in place.
 bg.boe_spin_right_by=\u00A0\u00A0\u00A0\u00A0\u00A0Spin Right By
 bg.boe_spin_right_by.description=Spins right in place by a specified number of degrees. 
 
+bg.boe_play_tune=\u00A0\u00A0\u00A0\u00A0\u00A0Plays Tune
+bg.boe_play_tune.description=Plays tune out pin connected to the piezo buzzer.
+
 ###################################################################
 ## Workshop Blocks
 ##
