--- a/Arduino/Dev/ArduBlock/ardublock/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/Arduino/Dev/ArduBlock/ardublock/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -3,7 +3,7 @@
 # BoE-Bot
 boe_forward=com.ardublock.translator.block.boe.BoEBotForward
 boe_backward=com.ardublock.translator.block.boe.BoEBotBackward
-boe_backward=com.ardublock.translator.block.boe.BoEBotStop
+boe_stop=com.ardublock.translator.block.boe.BoEBotStop
 boe_turn_left=com.ardublock.translator.block.boe.BoEBotTurnLeft
 boe_turn_left_by=com.ardublock.translator.block.boe.BoEBotTurnLeftBy
 boe_turn_right=com.ardublock.translator.block.boe.BoEBotTurnRight
@@ -12,6 +12,7 @@ boe_spin_left=com.ardublock.translator.block.boe.BoEBotSpinLeft
 boe_spin_left_by=com.ardublock.translator.block.boe.BoEBotSpinLeftBy
 boe_spin_right=com.ardublock.translator.block.boe.BoEBotSpinRight
 boe_spin_right_by=com.ardublock.translator.block.boe.BoEBotSpinRightBy
+boe_play_tune=com.ardublock.translator.block.boe.BoEBotPlayTune
 
 eeprom_read=com.ardublock.translator.block.storage.EEPROMReadBlock
 eeprom_write=com.ardublock.translator.block.storage.EEPROMWriteBlock
